--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-scripts": "^4.0.3",
     "react_ujs": "^2.6.1",
     "serve": "^12.0.0",
     "turbolinks": "^5.2.0",
@@ -31,9 +32,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "heroku-postbuild": "npm run build"
-  },
-  "engines": { 
-    "node": "12.16.2",
-    "npm": "6.14.13"
-  } 
+  }
 }
