--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
-    "react-scripts": "^4.0.3",
     "react_ujs": "^2.6.1",
     "serve": "^12.0.0",
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^4.0.0"
   },
   "version": "0.1.0",
   "devDependencies": {
