--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@
 
 /public/assets
 .byebug_history
+package-lock.json
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
