--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "turbolinks": "^5.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "^4.0.0",
+    "babel-loader": "8.1.0"
   },
   "version": "0.1.0",
   "devDependencies": {
