--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
     "turbolinks": "^5.2.0",
     "webpack": "4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^4.0.0",
+    "webpack-dev-server": "3.11.1",
     "babel-loader": "8.1.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "^4.0.0"
+    "webpack-dev-server": "3.11.1"
   },
   "scripts": {
     "dev": "react-scripts start",
