--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "react_ujs": "^2.6.1",
     "serve": "^12.0.0",
     "turbolinks": "^5.2.0",
-    "babel-loader": "8.1.0"
+    "babel-loader": "8.1.0",
+    "webpack": "4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "3.11.1"
   },
   "version": "0.1.0",
   "devDependencies": {
