--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -16,7 +16,7 @@ default: &default
   cache_manifest: true
 
   # Extract and emit a css file
-  extract_css: true
+  extract_css: false
 
   static_assets_extensions:
     - .jpg
@@ -87,7 +87,7 @@ production:
   compile: true
 
   # Extract and emit a css file
-  extract_css: true
+  extract_css: false
 
   # Cache manifest.json for performance
   cache_manifest: true
