--- a/package.json
+++ b/package.json
@@ -16,14 +16,13 @@
     "react_ujs": "^2.6.1",
     "serve": "^12.0.0",
     "turbolinks": "^5.2.0",
-    "babel-loader": "8.1.0",
-    "webpack": "4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "3.11.1"
+    "babel-loader": "8.1.0"
   },
   "version": "0.1.0",
   "devDependencies": {
-    "webpack-dev-server": "3.11.1"
+    "webpack-dev-server": "3.11.1",
+    "webpack": "4.44.2",
+    "webpack-cli": "^3.3.12"
   },
   "engines": {
     "node": "12.16.2",
