--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.2.1",
     "babel-loader": "8.1.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
@@ -16,13 +15,22 @@
     "react-icons": "^4.2.0",
     "react_ujs": "^2.6.1",
     "serve": "^12.0.0",
-    "turbolinks": "^5.2.0"
+    "turbolinks": "^5.2.0",
+    "@rails/webpacker": "5.2.1",
+    "react-scripts": "^4.0.3"
   },
   "version": "0.1.0",
   "devDependencies": {
     "webpack": "4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "3.11.1"
+  },
+  "scripts": {
+    "dev": "react-scripts start",
+    "start": "serve -s build",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "engines": {
     "node": "12.16.2",
