--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "serve": "^12.0.0",
     "turbolinks": "^5.2.0",
     "@rails/webpacker": "5.2.1",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "webpack": "4.44.2"
   },
   "version": "0.1.0",
   "devDependencies": {
