--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ package-lock.json
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 
-/public/packs
+/public/packs/js
 /public/packs-test
 /node_modules
 /yarn-error.log
