react rails fix

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "turbolinks": "^5.2.0",
     "@rails/webpacker": "5.2.1",
     "react-scripts": "^4.0.3",
-    "webpack": "4.44.2"
+    "webpack": "4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "3.11.1"
   },
   "version": "0.1.0",
   "devDependencies": {
